[tool.poetry]
name = "feedparser"
version = "6.0.10"
description = "Parse Atom/RSS/JSON feeds in Python"
readme = "README.rst"

repository = "https://github.com/kurtmckee/feedparser/"
documentation = "https://feedparser.readthedocs.io/en/latest/"

authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "BSD-2-Clause"

keywords = ["atom", "feed", "json", "rdf", "rss"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Topic :: Text Processing :: Markup",
]
include = ["feedparser/py.typed"]

[tool.poetry.dependencies]
python = "^3.6"
sgmllib3k = "^1.0.0"


[tool.poetry.group.dev.dependencies]
scriv = {extras = ["toml"], version = "^1.2.1"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Stewardship",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["develop", "master"]
new_fragment_template = "file: fragment-template.rst.txt"


[tool.isort]
profile = "black"


[tool.mypy]
show_error_codes = true
