[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
name = "feedparser"
version = "6.0.11"
description = "Parse Atom/RSS/JSON feeds in Python"
readme = "README.rst"

repository = "https://github.com/kurtmckee/feedparser/"
documentation = "https://feedparser.readthedocs.io/en/latest/"

authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "BSD-2-Clause"

keywords = ["atom", "feed", "json", "rdf", "rss"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup",
]
include = ["feedparser/py.typed"]

[tool.poetry.dependencies]
python = ">=3.9"
sgmllib3k = "^1.0.0"
requests = ">=2.20.0"


# coverage
# --------

[tool.coverage.run]
parallel = true
branch = true
source = [
    "feedparser",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 93

[tool.coverage.html]
directory = "htmlcov/"


# isort
# -----

[tool.isort]
profile = "black"


# mypy
# ----

[tool.mypy]
packages = "feedparser"
show_error_codes = true
sqlite_cache = true


# pytest
# ------

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Documentation",
    "Project development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["develop", "master"]
new_fragment_template = "file: fragment-template.rst.txt"
